data/derived/fa15/progs/unify/prog1334.ml.out
Characters 188-192:
  let (_, res) = List.fold_left f base args in res
                                  ^^^^
Error: This expression has type int * int
       but an expression was expected of type (int * int) list
